--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -61,6 +61,7 @@ MBDyn 1.X-Devel
 		- fix missing <errno.h> in Simulink interface
 		  (noted by Francesco Castellini)
 		- fix (and document) total internal force
+		- fix namespace clashes when building with mingw
 
 MBDyn 1.4.0
 	Enhancements:
