refactor NetCDF support

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -36,6 +36,7 @@ MBDyn 1.X-Devel
 		- added support for Mat3x3 & Mat6x6 template drive callers
 		- added variable properties body
 		- allow Euler angles input in degrees
+		- refactor NetCDF support
 	Backward compatibility issues:
 		- the (undocumented) output of the total (pin) joint changed
 		- the induced velocity element internal API changed
