'file' drive is not differentiable

--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -1767,7 +1767,7 @@ Drive callers are listed in Table~\ref{tab:DRIVE:DRIVE-CALLERS}.
 \kw{element} & $\surd$ & depends on subordinate drive caller \\ %
 \kw{exponential} & $\surd$ & \\
 \kw{ginac} & $\surd$ & symbolic differentiation using GiNaC \\
-\kw{file} & $\surd$ & \\ %
+\kw{file} & & \\ %
 \kw{fourier series} & $\surd$ & \\
 \kw{frequency sweep} & $\surd$ & depends on subordinate drive callers \\
 \kw{linear} & $\surd$ & \\
