--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -9,9 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
-MBDyn 1.X-Devel
+MBDyn 1.4.1
 	Enhancements:
-		- added screw joint (Mauro Manetti & Marco Morandini)
 		- log relative frame dummy nodes (Reinhard Resch)
 		- log struct node momentum dofs (Reinhard Resch)
 		- added support for octave (Reinhard Resch)
