--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -9,6 +9,15 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
+MBDyn 1.X-Devel
+	Enhancements:
+		- added screw joint (Mauro Manetti & Marco Morandini)
+	Backward compatibility issues:
+	Known issues:
+		- Schur solver is broken
+		- TotalPinJoint inverse dynamics support is broken
+	Bug fixes:
+
 MBDyn 1.4.1
 	Enhancements:
 		- log relative frame dummy nodes (Reinhard Resch)
