--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -17,6 +17,7 @@ MBDyn 1.X-Devel
 		- Schur solver is broken
 		- TotalPinJoint inverse dynamics support is broken
 	Bug fixes:
+		- fix structural nodes accel output (Reinhard Resch)
 
 MBDyn 1.4.1
 	Enhancements:
