'flip' is a keyword

--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -919,7 +919,7 @@ airfoil tables that are used by aerodynamic elements.
         " \bnt{filename} "
         [ , \kw{tolerance} , \bnt{tolerance} ]
         [ , \{ \kw{free format} | \kw{nrel} | \kw{fc511} \} ]
-        [ , flip ]
+        [ , \kw{flip} ]
         [ , \kw{echo} , " \bnt{output_filename} " [ , \kw{free format} ] ] ;
 \end{Verbatim}
 %\end{verbatim}
