--- a/mbdyn/TODO
+++ b/mbdyn/TODO
@@ -212,6 +212,7 @@ D. Code:
 	- allow to specify parameters independently for each eigenanalysis
 	- implement incremental load element inspired by Riks' method
 	  (DONE, module-loadinc)
+	- implement coaxial rotor inflow model (which?)
 
 
 
@@ -253,6 +254,9 @@ E. Bugs/missing features:
 	- implement referenceable template drive callers (much like regular drive callers) (DONE)
 	- implement support for pardiso linear solver when compiled with icc
 	- check "new" distance
+	- take care of nodes with output "off" in mbdyn2easyanim.sh
+	- allow "relative" node view in EasyAnim
+	- fix "use binary" in modal joint (DONE)
 
 
 
