--- a/mbdyn/manual/tecman/tecman-modal.tex
+++ b/mbdyn/manual/tecman/tecman-modal.tex
@@ -369,7 +369,7 @@ They are:
 \item[1.] Total mass
 (scalar)
 \begin{equation}
-	\mathrm{Inv}_1 = \sum_{i=1,N} m_i
+	\mathcal{I}_1 = \sum_{i=1,N} m_i
 \end{equation}
 where $m_i$ is the mass of the $i$-th FEM node\footnote{Although the input
 format, because of NASTRAN legacy, allows each global direction to have
@@ -379,13 +379,13 @@ and only use the one associated to component 1.}.
 \item[2.] Static moment
 (matrix $3\times{1}$)
 \begin{equation}
-	\T{Inv}_2 = \sum_{i=1,N} m_i \tilde{\T{f}}_i
+	\mathcal{I}_2 = \sum_{i=1,N} m_i \tilde{\T{f}}_i
 \end{equation}
 
 \item[3.] Static coupling between rigid body and FEM node displacements
 (matrix $3\times{M}$)
 \begin{equation}
-	\TT{Inv}_3 = \sum_{i=1,N} m_i \T{U}_i
+	\mathcal{I}_3 = \sum_{i=1,N} m_i \T{U}_i
 \end{equation}
 where the portion related to the $k$-th mode is computed by summation
 of the contribute of each FEM node, obtained by multiplying the FEM node
@@ -396,7 +396,7 @@ of the $k$-th mode.
 displacements
 (matrix $3\times{M}$)
 \begin{equation}
-	\TT{Inv}_4 = \sum_{i=1,N} \plbr{
+	\mathcal{I}_4 = \sum_{i=1,N} \plbr{
 		m_i \tilde{\T{f}}_i \times \T{U}_i
 		+ \T{J}_i \T{V}_i
 	}
@@ -410,7 +410,7 @@ $k$-th mode.
 \item[5.] Static coupling between FEM node displacements
 (matrix $3\times{M}\times{M}$)
 \begin{equation}
-	\TT{Inv}_{5j} = \sum_{i=1,N} m_i \T{U}_{ij} \times \T{U}_i
+	\mathcal{I}_{5j} = \sum_{i=1,N} m_i \T{U}_{ij} \times \T{U}_i
 \end{equation}
 where the portion related to the $j$-th mode is computed by summation
 of the contribute of each FEM node, obtained by multiplying the FEM node
@@ -421,7 +421,7 @@ $k$-th modal displacement $\T{U}_{ik}$.
 \item[6.] Modal mass matrix
 (matrix $M\times{M}$)
 \begin{equation}
-	\TT{Inv}_6 = \sum_{i=1,N} \plbr{
+	\mathcal{I}_6 = \sum_{i=1,N} \plbr{
 		m_i \T{U}_i^T \T{U}_i
 		+ \T{V}_i^T \T{J}_i \T{V}_i
 	}
@@ -430,7 +430,7 @@ $k$-th modal displacement $\T{U}_{ik}$.
 \item[7.] Inertia matrix
 (matrix $3\times{3}$)
 \begin{equation}
-	\TT{Inv}_7 = \sum_{i=1,N} \plbr{
+	\mathcal{I}_7 = \sum_{i=1,N} \plbr{
 		m_i \tilde{\T{f}}_i \times \tilde{\T{f}}_i \times^T + \T{J}_i
 	}
 \end{equation}
@@ -438,26 +438,26 @@ $k$-th modal displacement $\T{U}_{ik}$.
 \item[8.]
 (matrix $3\times{M}\times{3}$)
 \begin{equation}
-	\TT{Inv}_{8j} =
+	\mathcal{I}_{8j} =
 		\sum_{i=1,N} m_i \tilde{\T{f}}_{i} \times \T{U}_{ij} \times{}^T
 \end{equation}
 
 \item[9.]
 (matrix $3\times{M}\times{M}\times{3}$)
 \begin{equation}
-	\TT{Inv}_{9jk} = \sum_{i=1,N} m_i \T{U}_{ij} \times \T{U}_{ik} \times{}
+	\mathcal{I}_{9jk} = \sum_{i=1,N} m_i \T{U}_{ij} \times \T{U}_{ik} \times{}
 \end{equation}
 
 \item[10.]
 (matrix $3\times{M}\times{3}$)
 \begin{equation}
-	\TT{Inv}_{10j} = \sum_{i=1,N} \T{V}_{ij}\times \T{J}_i
+	\mathcal{I}_{10j} = \sum_{i=1,N} \T{V}_{ij}\times \T{J}_i
 \end{equation}
 
 \item[11.]
 (matrix $3\times{M}$)
 \begin{equation}
-	\TT{Inv}_{11} = \sum_{i=1,N} \T{J}_i \T{V}_i
+	\mathcal{I}_{11} = \sum_{i=1,N} \T{J}_i \T{V}_i
 \end{equation}
 
 \end{enumerate}
@@ -466,18 +466,18 @@ Using the invariants, the contributions to the inertia matrix of the body
 become
 \begin{subequations}
 \begin{align}
-	\T{M}_{xx}	&= \T{I} \, \mathrm{Inv}_1 \\
+	\T{M}_{xx}	&= \T{I} \, \mathcal{I}_1 \\
 	\T{M}_{x\phi}	&= \T{R}_0 \plbr{
-		\T{Inv}_2 + \TT{Inv}_3 \T{q}}\times{}  \T{R}_0^T \\
-	\T{M}_{xq}	&= \T{R}_0 \TT{Inv}_3 \\
+		\mathcal{I}_2 + \mathcal{I}_3 \T{q}}\times{}  \T{R}_0^T \\
+	\T{M}_{xq}	&= \T{R}_0 \mathcal{I}_3 \\
 	\T{M}_{\phi\phi}&= \T{R}_0 \plbr{
-		\TT{Inv}_7
-		+ \plbr{\TT{Inv}_{8j} + \TT{Inv}_{8j}^T} q_j
-		+ \TT{Inv}_{9jk} q_j q_k
+		\mathcal{I}_7
+		+ \plbr{\mathcal{I}_{8j} + \mathcal{I}_{8j}^T} q_j
+		+ \mathcal{I}_{9jk} q_j q_k
 	} \T{R}_0^T \\
 	\T{M}_{\phi q}	&= \T{R}_0 \lplbr{
-		\TT{Inv}_4
-		+ \TT{Inv}_{5j} q_j 
+		\mathcal{I}_4
+		+ \mathcal{I}_{5j} q_j 
 		+ \sum_{i=1,N} \plbr{
 			\T{J}_i \plbr{\T{V}_i \T{q}}\times^T \T{V}_i
 			+ \plbr{\T{V}_i \T{q}}\times \T{J}_i \T{V}_i
@@ -485,7 +485,7 @@ become
 	} \nonumber \\
 			& \rplbr{ \mbox{} + \sum_{i=1,N} \plbr{\T{V}_i \T{q}}\times \T{J}_i \plbr{\T{V}_i \T{q}}\times^T \T{V}_i
 	} \\
-	\T{M}_{qq}	&= \TT{Inv}_6 \nonumber \\
+	\T{M}_{qq}	&= \mathcal{I}_6 \nonumber \\
 			& \mbox{} + \sum_{i=1,N} \plbr{
 			\T{V}_i^T \T{J}_i \plbr{\T{V}_i \T{q}}\times^T \T{V}_i
 			+ \T{V}_i^T \plbr{\T{V}_i \T{q}}\times \T{J}_i \T{V}_i
@@ -502,23 +502,23 @@ the FEM node inertia, so that linear and quadratic terms
 in the nodal rotation become reasonably small, yielding
 \begin{subequations}
 \begin{align}
-	\T{M}_{xx}	&= \T{I} \, \mathrm{Inv}_1 \\
+	\T{M}_{xx}	&= \T{I} \, \mathcal{I}_1 \\
 	\T{M}_{x\phi}	&= \T{R}_0 \plbr{
-		\T{Inv}_2 + \TT{Inv}_3 \T{q}}\times{}  \T{R}_0^T \\
-	\T{M}_{xq}	&= \T{R}_0 \TT{Inv}_3 \\
+		\mathcal{I}_2 + \mathcal{I}_3 \T{q}}\times{}  \T{R}_0^T \\
+	\T{M}_{xq}	&= \T{R}_0 \mathcal{I}_3 \\
 	\T{M}_{\phi\phi}&= \T{R}_0 \plbr{
-		\TT{Inv}_7
-		+ \plbr{\TT{Inv}_{8j} + \TT{Inv}_{8j}^T} q_j
-		+ \TT{Inv}_{9jk} q_j q_k
+		\mathcal{I}_7
+		+ \plbr{\mathcal{I}_{8j} + \mathcal{I}_{8j}^T} q_j
+		+ \mathcal{I}_{9jk} q_j q_k
 	} \T{R}_0^T \\
 	\T{M}_{\phi q}	&= \T{R}_0 \plbr{
-		\TT{Inv}_4
-		+ \TT{Inv}_{5j} q_j 
+		\mathcal{I}_4
+		+ \mathcal{I}_{5j} q_j 
 	} \\
-	\T{M}_{qq}	&= \TT{Inv}_6 
+	\T{M}_{qq}	&= \mathcal{I}_6 
 \end{align}
 \end{subequations}
-In some cases, the only remaining quadratic term in $\TT{Inv}_{9jk}$
+In some cases, the only remaining quadratic term in $\mathcal{I}_{9jk}$
 is neglected as well.
 
 
