--- a/mbdyn/TODO
+++ b/mbdyn/TODO
@@ -213,8 +213,8 @@ D. Code:
 	- implement incremental load element inspired by Riks' method
 	  (DONE, module-loadinc)
 	- implement coaxial rotor inflow model (which?)
-	- implement constitutive law wrapper that combines (adds) constitutive laws
-	- allow strain sign in hunt-crossley module (in all constitutive laws?)
+	- implement constitutive law wrapper that combines (adds) constitutive laws (DONE)
+	- allow strain sign in hunt-crossley module (DONE; in all constitutive laws?)
 
 
 
