generic 'bistop' constitutive law wrapper

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -14,6 +14,7 @@ MBDyn 1.X-Devel
 		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added private data to generic aerodynamic force
 		- added 'array' constitutive law wrapper
+		- added generic 'bistop' constitutive law wrapper
 	Backward compatibility issues:
 	Known issues:
 		- Schur solver is broken
