--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -906,7 +906,8 @@ They are:
 Constitutive laws are grouped by their dimensionality \nt{dim},
 which (up to now) can be any of 1, 3 and 6.
 The \nt{constitutive\_law} is parsed according to the rules
-described in Section~\ref{sec:CONSTITUTIVE-LAWS}.
+described in Section~\ref{sec:CONSTITUTIVE-LAWS},
+and can be referenced later when it needs to be used.
 
 
 
