--- a/mbdyn/TODO
+++ b/mbdyn/TODO
@@ -198,7 +198,7 @@ D. Code:
 	- add record for damping matrix to modal input format
 	- define a UserDefinedElem class; inherit LoadableElem from it;
 	  allow UserDefined elements to be loaded run-time
-	  (obsoletes LoadableElem)
+	  (obsoletes LoadableElem; DONE)
 	- write macros to add items for mbdyn2easyanim (DONE)
 	- let symbolic constitutive law optionally know about "Time" & so
 	- allow math parser to generate expression tree (bison, ...)
