if needed, compute accelerations during update

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -28,6 +28,7 @@ MBDyn 1.X-Devel
 		- fix bug in deformable axial joint residual
 		- fix driven aerodynamic elements (noted by Phil Geoghegan)
 		- fix total(pin)joint when orientations are partially imposed
+		- fix struct node accelerations during update
 
 MBDyn 1.4.1
 	Enhancements:
