--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -29,7 +29,7 @@ MBDyn 1.X-Devel
 		- fix bug in deformable axial joint residual
 		- fix driven aerodynamic elements (noted by Phil Geoghegan)
 		- fix total(pin)joint when orientations are partially imposed
-		- fix struct node accelerations during update
+		- fix struct node accels during update (noted by CamilleYvin)
 
 MBDyn 1.4.1
 	Enhancements:
