--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -9,6 +9,16 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
+MBDyn 1.X-Devel
+	Enhancements:
+		- added screw joint (Mauro Manetti & Marco Morandini)
+		- added simple hydraulic damper model (Giuseppe Quaranta)
+	Backward compatibility issues:
+	Known issues:
+		- Schur solver is broken
+		- TotalPinJoint inverse dynamics support is broken
+	Bug fixes:
+
 MBDyn 1.4.2
 	Enhancements:
 		- added Hunt-Crossley impact model (Matteo Fancello)
