--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -16,7 +16,9 @@ MBDyn 1.X-Devel
 	Known issues:
 		- Schur solver is broken
 		- TotalPinJoint inverse dynamics support is broken
+		- RTAI and multithread support incompatible
 	Bug fixes:
+		- fix build with RTAI support
 
 MBDyn 1.4.2
 	Enhancements:
